# yilehang

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_REPORT.md  DEVELOPMENT.md  README.md  deploy.py  deploy_remote.py  deploy_server_cleanup.py  deploy_server_final.py  deploy_server_module.py  deploy_with_ssl.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.config.json  project.private.config.json
apps/api/: .env.example  alembic.ini  pyproject.toml  pytest.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_multi_role_system.py
apps/api/app/: main.py
apps/api/app/ai/: __init__.py  exercise_counter.py  pose_analyzer.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: __init__.py  admin_panel.py  ai.py  auth.py  bookings.py  chat.py  coaches.py  (+13 more)
apps/api/app/core/: __init__.py  config.py  database.py  security.py
apps/api/app/middleware/: role_auth.py
apps/api/app/models/: __init__.py  booking.py  chat.py  course.py  energy.py  growth.py  homework.py  merchant.py  notification.py  rbac.py  user.py
apps/api/app/schemas/: __init__.py  ai.py  booking.py  chat.py  course.py  energy.py  growth.py  merchant.py  notification.py  role.py  user.py
apps/api/app/services/: auth_service.py  booking_service.py  energy_service.py
apps/api/scripts/: __init__.py  init_db.py  seed_data.py  seed_role_permissions.py
apps/api/tests/: __init__.py  conftest.py  test_admin_panel.py  test_auth_login.py  test_chat_ws_security.py  test_coach_slots_students.py  test_energy_endpoints.py  test_energy_service.py  test_merchants_redeem_code_detail.py  test_role_api.py  test_schedules_list.py
apps/api/tests/integration/: test_data_authz.py  test_role_flow.py
apps/api/tests/performance/: test_performance.py
(+225 files in other folders)
